; ModuleID = '/home/carl/AnghaBench/qmk_firmware/tmk_core/protocol/extr_adb.c_adb_host_listen.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/tmk_core/protocol/extr_adb.c_adb_host_listen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @adb_host_listen(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = call i32 (...) @cli()
  %8 = call i32 (...) @attention()
  %9 = load i32, i32* %4, align 4
  %10 = call i32 @send_byte(i32 %9)
  %11 = call i32 (...) @place_bit0()
  %12 = call i32 @_delay_us(i32 200)
  %13 = call i32 (...) @place_bit1()
  %14 = load i32, i32* %5, align 4
  %15 = call i32 @send_byte(i32 %14)
  %16 = load i32, i32* %6, align 4
  %17 = call i32 @send_byte(i32 %16)
  %18 = call i32 (...) @place_bit0()
  %19 = call i32 (...) @sei()
  ret void
}

declare dso_local i32 @cli(...) #1

declare dso_local i32 @attention(...) #1

declare dso_local i32 @send_byte(i32) #1

declare dso_local i32 @place_bit0(...) #1

declare dso_local i32 @_delay_us(i32) #1

declare dso_local i32 @place_bit1(...) #1

declare dso_local i32 @sei(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
